<resources>
    <string name="app_name">ActiveLife</string>
    <string name="hello_blank_fragment">Hola fragmento en blanco</string>
    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Cerrar</string>
    <string name="action_settings">Configuración</string>
    <string name="action_search">Buscar</string>
    <string name="title_activity_main">ActiveLife</string>
    <string name="title_activity_settings">Configuración</string>
    <string name="title_activity_login">Iniciar sesión</string>
    <string name="title_activity_register">Registrarse</string>
    <string name="prompt_email">Correo electrónico</string>
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_confirm_password">Confirmar contraseña</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_register">Registrarse</string>
    <string name="error_invalid_email">Esta dirección de correo electrónico no es válida</string>
    <string name="error_incorrect_password">Esta contraseña es incorrecta</string>
    <string name="error_field_required">Este campo es obligatorio</string>
    <string name="error_invalid_password">Esta contraseña es demasiado corta</string>
    <string name="error_password_mismatch">Las contraseñas no coinciden</string>
    <string name="edit_image">Editar Foto</string>
    <string name="username">Nombre de usuario</string>
    <string name="save">Guardar</string>
    <string name="active">Activo</string>
    <string name="series">Series</string>
    <string name="repetitions">Repeticiones</string>
    <string name="password">Contraseña</string>
    <string name="no_have_account">¿No tienes cuenta? Regístrate</string>
    <string name="email">Correo electrónico</string>
    <string name="be_admin">¿Eres administrador?</string>
    <string name="register">Registrarse</string>
    <string name="already_have_account">¿Ya tienes una cuenta? Inicia sesión aquí</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="about">Sobre la App</string>
    <string name="home">Inicio</string>
    <string name="routines">Rutinas</string>
    <string name="meetings">Citas</string>
    <string name="delete_image">Eliminar Imagen</string>
    <string name="title_routine">Título de la rutina</string>
    <string name="title_meeting">Título de la cita</string>
    <string name="edit">Editar</string>
    <string name="add_cita">Añadir cita</string>
    <string name="respuesta_format">Respuesta: %1$s</string>
    <string name="download_pdf">Descargar PDF</string>
    <string name="no_pdf">Esta cita no tiene PDF</string>
    <string name="no_active_routine">Vaya, parece que no tienes ninguna rutina activa. ¡Echa un vistazo a esta rutina pública!</string>
    <string name="no_response">No hay respuesta</string>
    <string name="text_person_1">Soy un joven de 19 años, nacido en España. Soy una persona amable y trabajadora, siempre dispuesto a ayudar a los demás. Me encanta pasar tiempo con mis amigos y familiares, y disfrutar de la música y los deportes. Me apasiona aprender cosas nuevas. En mi tiempo libre, me gusta leer y ver películas. Soy una persona muy sociable y me gusta estar rodeado de gente que quiero.</string>
    <string name="text_person_2">Soy una joven de 19 años. Soy una persona alegre y dedicada, siempre dispuesta a ofrecer una mano amiga. Disfruto de pasar tiempo con mis seres queridos y me apaxiona el deporte y la musica. Me encanta aprender sobre diferentes culturas y explorar nuevos horizontes. En mi tiempo libre, disfruto de la fotografía y el senderismo.</string>
    <string name="name_creator_1">Pablo García Muñoz</string>
    <string name="text_presenting_creators">Desarrolladores de la App y alumnos del CPIFP Alan Turing</string>
    <string name="name_creator_2">Antonio Luis García Guerrero</string>
    <string name="description_app">Mejora tu salud y bienestar con nuestra app. Crea rutinas personalizadas, gestiona tus actividades y agenda citas con nuestros expertos para cualquier consulta. Una herramienta integral para tu bienestar diario.</string>
    <string name="select_date">Selecciona una fecha</string>
    <string name="take_picture">Tomar Foto</string>
    <string name="delete_picture">Eliminar Foto</string>
    <string name="save_meeting">Guardar cita</string>
    <string name="add_exercise">Añadir ejercicio</string>
    <string name="add_exercise_predefined">Añadir Ejercicio Predefinido</string>
    <string name="name_exercise">Nombre del ejercicio</string>
    <string name="add_image">Añadir Imagen</string>
    <string name="delete">Eliminar</string>
    <string name="add">Añadir</string>
    <string name="create_routine">Crear Rutina</string>
    <string name="create_meeting">Crear Cita</string>
    <string name="date_meeting">Fecha de la Cita</string>
    <string name="admin">Encargado</string>
    <string name="wait">Espera</string>
    <string name="denied">Denegado</string>
    <string name="accept">Aceptado</string>
    <string name="no_meeting_yet">No hay citas todavía</string>
    <string name="public_routine">Rutinas Públicas</string>
    <string name="show_actives">Mostrar Activas</string>
    <string name="add_routine">Crear Rutina</string>
    <string name="status">Estado</string>
    <string name="reponse">Respuesta</string>
    <string name="copy">Copiar</string>
    <string name="description_meeting">Descripción de la cita</string>
    <string name="next_routine">Rutina</string>
    <string name="next_meeting">Cita</string>
    <string name="selected_image">Seleccionar Imagen</string>
    <string name="take_photo">Hacer una foto</string>
    <string name="choose_from_gallery">Escoger de la galeria</string>
    <string name="cancel">Cancelar</string>
    <string-array name="days_of_week">
        <item>Lunes</item>
        <item>Martes</item>
        <item>Miércoles</item>
        <item>Jueves</item>
        <item>Viernes</item>
        <item>Sábado</item>
        <item>Domingo</item>
    </string-array>
    <string-array name="sort_options">
        <item>Día (Ascendente)</item>
        <item>Día (Descendente)</item>
    </string-array>
    <string name="series_format">Series: %1$d</string>
    <string name="repetitions_format">Repeticiones: %1$d</string>
    <string name="targeted_muscles_format">Músculos objetivo: %1$s</string>
    <string-array name="body_parts">
        <item>none</item>
        <item>back</item>
        <item>cardio</item>
        <item>chest</item>
        <item>lower arms</item>
        <item>lower legs</item>
        <item>neck</item>
        <item>shoulders</item>
        <item>upper arms</item>
        <item>upper legs</item>
        <item>waist</item>
    </string-array>
</resources>
