<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item android:id="@+id/nav_item_one"
            android:icon="@drawable/home"
            android:title="@string/home"/>
        <item android:id="@+id/nav_item_two"
            android:icon="@drawable/fitness_center"
            android:title="@string/routines"/>
        <item android:id="@+id/nav_item_three"
            android:icon="@drawable/cita"
            android:title="@string/meetings"/>
        <item android:id="@+id/nav_item_four"
            android:icon="@drawable/about"
            android:title="@string/about"/>
    </group>
    <item android:id="@+id/nav_item_five"
        android:icon="@drawable/logout"
        android:title="@string/logout"
        android:orderInCategory="100"
        android:titleTextColor="#FF0000"/> <!-- Color rojo para el texto -->
</menu>
