<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ui.fragments.perfil.EditarPerfilFragment">

    <!-- Contenedor para la imagen de perfil y el botón de eliminación -->

    <ImageButton
        android:id="@+id/buttonEliminarFoto"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="end|top"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:padding="8dp"
        android:src="@android:drawable/ic_menu_delete" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <!-- Imagen de perfil con espacio para transformación circular -->
        <ImageView
            android:id="@+id/imageViewPerfil"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/person"
            android:clickable="true"
            android:focusable="true"
            android:layout_gravity="center"
            android:padding="4dp"
            android:elevation="4dp"/>

        <!-- Botón para eliminar la foto -->
    </FrameLayout>

    <!-- Botón para abrir la cámara -->
    <Button
        android:id="@+id/buttonEditarFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_image"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/white"/>

    <!-- Input para el nombre de usuario -->
    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:layout_marginTop="16dp"
        android:padding="12dp"
        android:background="@drawable/edittext_background"
        android:textColor="#33475b"
        android:textColorHint="#b0bec5"/>

    <!-- Botón para guardar cambios -->
    <Button
        android:id="@+id/buttonGuardarCambios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/white"/>

</LinearLayout>
